minor buttons alignement fix

--- a/Web.Upnp.Control/ClientApp/src/styles/_player.scss
+++ b/Web.Upnp.Control/ClientApp/src/styles/_player.scss
@@ -55,12 +55,10 @@
 
     .volume-btn {
         grid-area: vol;
-        justify-self: end;
     }
 
     .mode-btn {
         grid-area: mode;
-        justify-self: start;
     }
 
     @media (max-height: 420px) {
